tests/grammar/valid/core-unsafe-asm-01.vit
entry main at core/app {
  unsafe {
    asm("nop")
  }
  give 0
}
