tests/grammar/invalid/entry-missing-module-path-01.vit
entry main at { give 0 }
